# open-anki

./: .aicursor  .gitignore  APP_STORE_SETUP.md  ICON_GENERATION.md  LICENSE.txt  README.md  TESTING_GUIDE.md  dev.md  pubspec.yaml  release.sh  setup_icon.sh  test.js
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
integration_test/: deck_review_flow_test.dart  import_auto_test.dart  simple_test.dart
ios/: Podfile
ios/Runner/: Info.plist  Products.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_de.arb  app_en.arb  app_fr.arb  app_ja.arb  app_ko.arb  app_ru.arb  app_zh.arb
lib/src/: constants.dart  db.dart  log_helper.dart  model.dart  providers.dart
lib/src/pages/: card_review_page.dart  debug_page.dart  home_page.dart  html_source_page.dart  iap_page.dart  import_page.dart  notes_page.dart  (+3 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_open_anki.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_open_anki.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+16 files in other folders)
