[package]
name = "rust_lib_open_anki"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.4"
rusqlite = { version = "0.30", features = ["bundled"] }
zip = "0.6"
serde_json = "1.0"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
md5 = "0.7"
itertools = "0.12"
chrono = "0.4.41"
ctor = "0.4.2"
rs-fsrs = "1.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
